boltffi_bindgen/src/render/csharp/snapshots/boltffi_bindgen__render__csharp__templates__tests__snapshot_c_style_enum_log_level_u8.snap
---
source: boltffi_bindgen/src/render/csharp/templates.rs
expression: template.render().unwrap()
---
// <auto-generated>
// This file was generated by BoltFFI. Do not edit.
// </auto-generated>

using System;

namespace Demo
{
    public enum LogLevel : byte
    {
        Trace = 0,
        Debug = 1,
        Info = 2,
        Warn = 3,
        Error = 4
    }

    internal static class LogLevelWire
    {
        internal const int WireEncodedSize = 1;

        internal static LogLevel Decode(WireReader reader) =>
            (LogLevel)reader.ReadU8();

        internal static void WireEncodeTo(this LogLevel value, WireWriter wire) =>
            wire.WriteU8((byte)value);
    }
}
