boltffi_bindgen/src/render/csharp/snapshots/boltffi_bindgen__render__csharp__templates__tests__snapshot_c_style_enum_status.snap
---
source: boltffi_bindgen/src/render/csharp/templates.rs
assertion_line: 229
expression: template.render().unwrap()
---
// <auto-generated>
// This file was generated by BoltFFI. Do not edit.
// </auto-generated>

using System;

namespace Demo
{
    public enum Status : int
    {
        Active = 0,
        Inactive = 1,
        Pending = 2
    }

    internal static class StatusWire
    {
        internal const int WireEncodedSize = 4;

        internal static Status Decode(WireReader reader) =>
            (Status)reader.ReadI32();

        internal static void WireEncodeTo(this Status value, WireWriter wire) =>
            wire.WriteI32((int)value);
    }
}
