boltffi_bindgen/src/render/csharp/snapshots/boltffi_bindgen__render__csharp__templates__tests__snapshot_c_style_enum_with_methods_direction.snap
---
source: boltffi_bindgen/src/render/csharp/templates.rs
assertion_line: 360
expression: template.render().unwrap()
---
// <auto-generated>
// This file was generated by BoltFFI. Do not edit.
// </auto-generated>

using System;

namespace Demo
{
    public enum Direction : int
    {
        North = 0,
        South = 1,
        East = 2,
        West = 3
    }

    internal static class DirectionWire
    {
        internal const int WireEncodedSize = 4;

        internal static Direction Decode(WireReader reader) =>
            (Direction)reader.ReadI32();

        internal static void WireEncodeTo(this Direction value, WireWriter wire) =>
            wire.WriteI32((int)value);
    }

    public static class DirectionMethods
    {

        public static Direction FromDegrees(double degrees)
        {
            return NativeMethods.DirectionFromDegrees(degrees);
        }

        public static uint Count()
        {
            return NativeMethods.DirectionCount();
        }

        public static Direction Opposite(this Direction self)
        {
            return NativeMethods.DirectionOpposite(self);
        }

        public static bool IsHorizontal(this Direction self)
        {
            return NativeMethods.DirectionIsHorizontal(self);
        }

        public static string Label(this Direction self)
        {
            FfiBuf _buf = NativeMethods.DirectionLabel(self);
            try
            {
                return new WireReader(_buf).ReadString();
            }
            finally
            {
                NativeMethods.FreeBuf(_buf);
            }
        }
    }
}
